# claude_study

./: .gitattributes  .gitignore  README.md  REFERENCES.md  pyproject.toml
src/agentic_lab/: __init__.py  agent_runners.py  cli.py  config.py  context.py  llm.py  memory.py  mission_board.py  orchestrator.py  planner.py  schemas.py  security.py  skills_engine.py  webui.py
src/agentic_lab/skills/coding/: SKILL.md
src/agentic_lab/skills/research/: SKILL.md
src/agentic_lab/tools/: __init__.py  base.py  fs.py  shell.py
