[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-lab"
version = "0.2.0"
description = "A production-ready Agentic framework inspired by Claude Code patterns"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "agentic-lab"}]
dependencies = []

[project.scripts]
agentic = "agentic_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic_lab = ["skills/*/SKILL.md"]
